--- a/tienda/Views/Home/Index.cshtml
+++ b/tienda/Views/Home/Index.cshtml
@@ -2,7 +2,26 @@
     ViewData["Title"] = "Home Page";
 }
 
+@model tienda.Models.Nodo
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1>@ViewData["Message"] </h1>
+    <h1>@ViewBag.Mensaje </h1>
+    <form method="post">
+        <div>
+            <input type="text" class="form-control" name="codigo" placeholder="Introducir codigo:"/>
+            <input type="text" class="form-control" name="nombre" placeholder="Introducir nombre:"/>
+            <input type="text" class="form-control" name="precio" placeholder="Introducir precio:"/>
+        </div>
+        <div>
+            <button type="submit" class="btn-group">Enviar informacion</button>
+        </div>
+        <div>
+            <p>@ViewBag.Codigo</p>
+            <p style="color:orangered">@ViewBag.Nombre</p>
+            <p style="color:red">@ViewBag.Precio</p>
+            
+        </div>
+    </form>
+
 </div>
