--- a/tienda/Views/Shared/_Layout.cshtml
+++ b/tienda/Views/Shared/_Layout.cshtml
@@ -21,6 +21,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <li class="nav.nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Camisas">Camisas</a>
+                        </li>
+                        <li class="nav.nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Pantalones">Pantalones</a>
+                        </li>
+                        <li class="nav.nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Zapatos">Zapatos</a>
+                        </li>
+                        <li class="nav.nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Sombreros">Sombreros</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
