--- a/tienda/Views/Home/Index.cshtml
+++ b/tienda/Views/Home/Index.cshtml
@@ -9,18 +9,15 @@
     <h1>@ViewBag.Mensaje </h1>
     <form method="post">
         <div>
-            <input type="text" class="form-control" name="codigo" placeholder="Introducir codigo:"/>
-            <input type="text" class="form-control" name="nombre" placeholder="Introducir nombre:"/>
-            <input type="text" class="form-control" name="precio" placeholder="Introducir precio:"/>
+            <input type="text" class="form-control" name="tipo" placeholder="Introducir el tipo de producto: (1. Camisa 2. Pantalones 3. Zapatos 4. Sombreros)"/>
+            <input type="text" class="form-control" name="codigo" placeholder="Codigo del producto: (del 1 al 9)"/>
         </div>
         <div>
             <button type="submit" class="btn-group">Enviar informacion</button>
         </div>
         <div>
-            <p>@ViewBag.Codigo</p>
-            <p style="color:orangered">@ViewBag.Nombre</p>
-            <p style="color:red">@ViewBag.Precio</p>
-            
+            <p>@ViewBag.Tipo</p>
+            <p style="color:orangered">@ViewBag.Codigo</p> 
         </div>
     </form>
 
