--- a/tienda/Views/Home/Camisas.cshtml
+++ b/tienda/Views/Home/Camisas.cshtml
@@ -1,6 +1,78 @@
 @{
     ViewData["Title"] = "Camisas";
 }
+<head>
+</head>
 <div class="text-center">
-    <h1 class="display-4">Camisas</h1>
+    <h1 class="display-4">Camisas</h1>  
 </div>
+<body>
+    <table style="border: 1px solid black">
+        <tr>
+            <th style="text-align:center"><b>POSICION</b></th>
+            <th style="text-align:center"><b>CODIGO</b></th>
+            <th style="text-align:center"><b>NOMBRE</b></th>
+            <th style="text-align:center"><b>PRECIO</b></th>
+        </tr>
+        <tr>
+            <td style="text-align:center">1</td>
+            <td style="text-align:center">@ViewBag.Codigo1</td>
+            <td style="text-align:center">@ViewBag.Nombre1</td>
+            <td style="text-align:center">$@ViewBag.Precio1</td>
+        </tr>
+        <tr>
+            <td style="text-align:center">2</td>
+            <td style="text-align:center">@ViewBag.Codigo2</td>
+            <td style="text-align:center">@ViewBag.Nombre2</td>
+            <td style="text-align:center">$@ViewBag.Precio2</td>
+        </tr>
+        <tr>
+            <td style="text-align:center">3</td>
+            <td style="text-align:center">@ViewBag.Codigo3</td>
+            <td style="text-align:center">@ViewBag.Nombre3</td>
+            <td style="text-align:center">$@ViewBag.Precio3</td>
+        </tr>
+        <tr>
+            <td style="text-align:center">4</td>
+            <td style="text-align:center">@ViewBag.Codigo4</td>
+            <td style="text-align:center">@ViewBag.Nombre4</td>
+            <td style="text-align:center">$@ViewBag.Precio4</td>
+        </tr>
+        <tr>
+            <td style="text-align:center">5</td>
+            <td style="text-align:center">@ViewBag.Codigo5</td>
+            <td style="text-align:center">@ViewBag.Nombre5</td>
+            <td style="text-align:center">$@ViewBag.Precio5</td>
+        </tr>
+        <tr>
+            <td style="text-align:center">6</td>
+            <td style="text-align:center">@ViewBag.Codigo6</td>
+            <td style="text-align:center">@ViewBag.Nombre6</td>
+            <td style="text-align:center">$@ViewBag.Precio6</td>
+        </tr>
+        <tr>
+            <td style="text-align:center">7</td>
+            <td style="text-align:center">@ViewBag.Codigo7</td>
+            <td style="text-align:center">@ViewBag.Nombre7</td>
+            <td style="text-align:center">$@ViewBag.Precio7</td>
+        </tr>
+        <tr>
+            <td style="text-align:center">8</td>
+            <td style="text-align:center">@ViewBag.Codigo8</td>
+            <td style="text-align:center">@ViewBag.Nombre8</td>
+            <td style="text-align:center">$@ViewBag.Precio8</td>
+        </tr>
+        <tr>
+            <td style="text-align:center">9</td>
+            <td style="text-align:center">@ViewBag.Codigo9</td>
+            <td style="text-align:center">@ViewBag.Nombre9</td>
+            <td style="text-align:center">$@ViewBag.Precio9</td>
+        </tr>
+        <tr>
+            <td style="text-align:center">10</td>
+            <td style="text-align:center">@ViewBag.Codigo10</td>
+            <td style="text-align:center">@ViewBag.Nombre10</td>
+            <td style="text-align:center">$@ViewBag.Precio10</td>
+        </tr>       
+    </table>
+</body>
