--- a/tienda/Views/Home/Camisas.cshtml
+++ b/tienda/Views/Home/Camisas.cshtml
@@ -7,7 +7,7 @@
     <h1 class="display-4">Camisas</h1>  
 </div>
 <body>
-    <table style="border: 1px solid black">
+    <table style="border: 1px solid black" align="center">
         <tr>
             <th style="text-align:center"><b>POSICION</b></th>
             <th style="text-align:center"><b>CODIGO</b></th>
