--- a/tienda/Views/Home/Index.cshtml
+++ b/tienda/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 @model tienda.Models.Nodo
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Agregar producto</h1>
     <h1>@ViewData["Message"] </h1>
     <h1>@ViewBag.Mensaje </h1>
     <form method="post">
@@ -14,10 +14,6 @@
         </div>
         <div>
             <button type="submit" class="btn-group">Enviar informacion</button>
-        </div>
-        <div>
-            <p>@ViewBag.Tipo</p>
-            <p style="color:orangered">@ViewBag.Codigo</p> 
         </div>
     </form>
 
