--- a/tienda/Views/Home/Pantalones.cshtml
+++ b/tienda/Views/Home/Pantalones.cshtml
@@ -78,6 +78,7 @@
     <form method="post">
         <p> </p>
         <div>
+            <p>@ViewBag.Tardo1@ViewBag.Tiempo1@ViewBag.Mensaje1</p>
             <button type="submit" value="Ordenar1" name="ordenar1" class="btn-group">Ordenar por codigo</button>
             <button type="submit" value="Ordenar2" name="ordenar2" class="btn-group">Ordenar por precio</button>
         </div>        
