--- a/tienda/Views/Shared/_Layout.cshtml
+++ b/tienda/Views/Shared/_Layout.cshtml
@@ -33,6 +33,9 @@
                         <li class="nav.nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Sombreros">Sombreros</a>
                         </li>
+                        <li class="nav.nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Ventas">Ventas</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
